--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -46,53 +46,98 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3">
+        android:layout_weight="3"
+        android:gravity="center"
+        >
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            >
+
+            <com.app.l_pesa.common.CircularImageView
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/imgProfilePhoto"
+                android:layout_width="@dimen/_75sdp"
+                android:layout_height="@dimen/_75sdp"
+                android:src="@drawable/ic_profile"
+                app:civ_border_color="@color/screenBackground"
+                app:civ_border_width="@dimen/_1sdp"
+                android:layout_gravity="center"
+
+                />
+
+            <com.app.l_pesa.common.CircularImageView
+                android:id="@+id/imgEditPhoto"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:layout_width="@dimen/_30sdp"
+                android:layout_height="@dimen/_30sdp"
+                android:src="@drawable/ic_profile"
+                android:layout_gravity="bottom|center"
+
+                />
+
+
+        </FrameLayout>
 
 
     </LinearLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_PHONE"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.25"
-
-        />
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".50"
+        android:layout_weight="1.25"
         android:orientation="vertical"
 
         />
 
     <RelativeLayout
-        android:id="@+id/rlEmail"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1.25"
         android:gravity="center"
-       />
+        android:layout_marginStart="@dimen/_12sdp"
+        android:layout_marginEnd="@dimen/_12sdp"
+        android:background="@drawable/bg_black_view">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight=".50"
-        android:orientation="vertical"
 
-        />
+            <com.app.l_pesa.common.CommonEditTextRegular
+                android:id="@+id/etPhone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/_7sdp"
+                android:hint="@string/enter_name"
+                android:paddingStart="@dimen/_5sdp"
+                android:paddingEnd="@dimen/_2sdp"
+                android:background="@android:color/transparent"
+                android:textSize="@dimen/_15sdp"
+                android:layout_margin="@dimen/_5sdp"
+                android:textColor="@color/colorWhite"
+                android:inputType="text|textPassword"
+                android:textColorHint="@color/colorWhite"
+                android:maxLength="30"
+                android:text=""
+                android:gravity="start|center"
+                android:cursorVisible="true"
+                android:textCursorDrawable="@null"
+                android:focusable="true"
+                android:maxLines="1"
+                android:longClickable="false"
+
+
+                />
+
+    </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.25"
-
+        android:layout_weight="2.25"
 
         >
-
 
     </RelativeLayout>
 
