--- a/app/src/main/res/layout/activity_registration_step_two.xml
+++ b/app/src/main/res/layout/activity_registration_step_two.xml
@@ -135,10 +135,30 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2.25"
+        android:layout_weight="1"
+
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.25"
+        android:layout_marginLeft="@dimen/_12sdp"
+        android:layout_marginRight="@dimen/_12sdp"
 
         >
 
+        <com.app.l_pesa.common.CommonTextRegular
+            android:id="@+id/txtLogin"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/final_step"
+            android:gravity="center"
+            android:textSize="@dimen/_16sdp"
+            android:textColor="@color/colorWhite"
+            android:textAllCaps="true"
+            android:background="@drawable/bg_yellow_bg"
+            android:textStyle="bold"
+            />
     </RelativeLayout>
 
     <LinearLayout
