--- a/app/src/main/res/layout/dashboard_layout.xml
+++ b/app/src/main/res/layout/dashboard_layout.xml
@@ -1,51 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipeRefreshLayout"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">-->
-
-    <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/rootLayout"
-        >
-        <RelativeLayout
-            android:id="@+id/top_bar_dashboard"
-            android:background="@color/colorAccent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-
-        </RelativeLayout>
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/rootLayout"
+    android:background="@color/screenBackground"
+    android:orientation="vertical"
+    android:weightSum="10">
 
         <LinearLayout
-            android:id="@+id/total_header"
+            android:id="@+id/ll_header"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
+            android:layout_height="0dp"
+            android:layout_weight="1.25"
             >
 
-            <RelativeLayout
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                tools:ignore="UselessParent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="@color/colorApp">
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        android:background="@android:color/transparent">
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/total_header"
+                    android:orientation="horizontal"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="@dimen/_15sdp"
+                    android:layout_marginLeft="@dimen/_15sdp"
+                    android:background="@drawable/bg_white_view"
+                    android:layout_gravity="center"
+                    >
+
+                    <RelativeLayout
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/semi_white">
+
+                        <ImageView
+                            android:id="@+id/left_header"
+                            android:contentDescription="@string/app_name"
+                            android:layout_width="@dimen/_25sdp"
+                            android:layout_height="@dimen/_25sdp"
+                            android:layout_centerInParent="true"
+                            app:srcCompat="@drawable/ic_my_fixed_deposit"
+                            android:scaleType="fitXY"
+                            android:adjustViewBounds="true"
+
+                            />
+
+                        <com.app.l_pesa.common.CommonTextRegular
+                            android:layout_below="@+id/left_header"
+                            android:id="@+id/left_header_txt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorApp"
+                            android:textSize="@dimen/_12sdp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/_1sdp"
+                            />
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="@dimen/_1sdp"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="@dimen/_3sdp"
+                        android:layout_marginBottom="@dimen/_3sdp"
+                        android:background="@color/colorGrey"
+                        >
+
+
+                    </View>
+
+                    <RelativeLayout
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/semi_white"
+                        >
+
+                        <ImageView
+                            android:id="@+id/right_header"
+                            android:contentDescription="@string/app_name"
+                            android:layout_width="@dimen/_25sdp"
+                            android:layout_height="@dimen/_25sdp"
+                            app:srcCompat="@drawable/ic_my_savings_account"
+                            android:layout_centerInParent="true"
+                            android:scaleType="fitXY"
+                            android:adjustViewBounds="true"
+
+
+                            />
+
+                        <com.app.l_pesa.common.CommonTextRegular
+                            android:layout_below="@+id/right_header"
+                            android:id="@+id/right_header_txt"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorApp"
+                            android:textSize="@dimen/_12sdp"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="@dimen/_1sdp"
+                            />
+
+                    </RelativeLayout>
+
+                </LinearLayout>
+            </FrameLayout>
+
+            <!--<RelativeLayout
                 android:id="@+id/total_header_left"
                 android:gravity="center"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:background="@color/colorWhite"
+
                 >
 
                 <ImageView
                     android:id="@+id/left_header"
-                    android:layout_width="@dimen/_35sdp"
-                    android:layout_height="@dimen/_35sdp"
+                    android:contentDescription="@string/app_name"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
                     android:layout_centerInParent="true"
-
+                    app:srcCompat="@drawable/ic_my_fixed_deposit"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
 
                     />
 
@@ -64,19 +177,15 @@
             <RelativeLayout
                 android:layout_width="@dimen/_1sdp"
                 android:layout_height="match_parent"
-                android:paddingTop="@dimen/_5sdp"
-                android:paddingBottom="@dimen/_5sdp"
-                android:background="@color/colorAccent"
-
-                >
+            >
 
                 <LinearLayout
                     android:layout_width="@dimen/_1sdp"
                     android:layout_height="match_parent"
                     android:background="@color/colorAccent"
-                    android:layout_marginTop="@dimen/_4sdp"
-                    android:layout_marginBottom="@dimen/_4sdp"
-                    android:layout_centerInParent="true">
+                    android:layout_marginTop="@dimen/_10sdp"
+                    android:layout_marginBottom="@dimen/_10sdp"
+                    >
 
                 </LinearLayout>
 
@@ -95,9 +204,13 @@
 
                 <ImageView
                     android:id="@+id/right_header"
-                    android:layout_width="@dimen/_35sdp"
-                    android:layout_height="@dimen/_35sdp"
+                    android:contentDescription="@string/app_name"
+                    android:layout_width="@dimen/_30sdp"
+                    android:layout_height="@dimen/_30sdp"
+                    app:srcCompat="@drawable/ic_my_savings_account"
                     android:layout_centerInParent="true"
+                    android:scaleType="fitXY"
+                    android:adjustViewBounds="true"
 
                     />
 
@@ -111,124 +224,14 @@
                     android:layout_centerHorizontal="true"
                     />
 
-            </RelativeLayout>
+            </RelativeLayout>-->
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:id="@+id/header_below_layout"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_below="@+id/total_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingEnd="@dimen/_5sdp"
-            android:paddingStart="@dimen/_5sdp"
-            >
-            <TextView
-                android:id="@+id/credit_score_lable"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Your L-Pesa Credit Score"
-
-                android:layout_marginTop="@dimen/_7sdp"
-                />
-
-            <SeekBar
-                android:id="@+id/seek_bar"
-                android:layout_centerInParent="true"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_20sdp"
 
 
-                />
-            <ImageView
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_10sdp"/>
 
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/full_score"
-                android:layout_alignParentEnd="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/seek_bar"
-                android:layout_marginTop="@dimen/_3sdp"
-
-                />
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txt_score"
-                android:layout_alignParentStart="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/seek_bar"
-                android:layout_marginTop="6dp"
-
-                />
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/txt_made"
-                android:layout_centerInParent="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/seek_bar"
-                android:layout_marginTop="6dp"
-
-                />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/banner_layout"
-            android:layout_below="@+id/header_below_layout"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_width="match_parent"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_marginStart="@dimen/_15sdp"
-            android:layout_marginEnd="@dimen/_15sdp">
-            <ImageView
-
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="fitXY"
-                />
-            <ImageView
-                android:id="@+id/close_banner"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:layout_margin="@dimen/_5sdp"
-                />
-
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_below="@+id/banner_layout"
-            android:layout_marginTop="@dimen/_7sdp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/_15sdp"
-            android:layout_marginStart="@dimen/_15sdp">
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/loan_list"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                >
-
-            </android.support.v7.widget.RecyclerView>
-
-        </RelativeLayout>
-
-    </RelativeLayout>
+    </LinearLayout>
 
 <!--<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
